--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section id="home" class="hero">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1 class="animate-on-load">Designing Digital Realities</h1>
+                    <h1 class="animate-on-load">Designing Digital Solutions</h1>
                     <p class="animate-on-load">I'm Varun, an Automation Engineer & Full-Stack Developer creating fluid, intelligent, and beautiful applications for the modern web.</p>
                     <div class="hero-buttons animate-on-load">
                         <a href="#projects" class="btn primary"><i class="ri-rocket-line"></i> Explore My Work</a>
@@ -143,7 +143,7 @@
         <section id="about" class="glass-card animate-scroll">
             <h2 class="section-title">A Fusion of Logic and Creativity</h2>
             <div class="about-content">
-                <p>From my base in Uruguay, I engineer solutions that blend creative development with operational excellence. My passion is building seamless user experiences—from complex cloud APIs to intuitive desktop applications.</p>
+                <p>I engineer solutions that blend creative development with operational excellence. My passion is building complex cloud APIs to full scale automation solutions.</p>
             </div>
         </section>
 
@@ -154,18 +154,9 @@
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
                         <img src="assets/img/company-logo-1.png" alt="TCS Logo" class="company-logo">
-                        <h3 class="timeline-title">Automation Engineer <span class="company">@ TCS (Humana)</span></h3>
-                        <span class="timeline-date">Jul 2024 – Present</span>
-                        <p>Architecting and managing cloud-native solutions, focusing on API development with Flask, Docker orchestration, and implementing robust logging and monitoring systems for high availability.</p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-content">
-                       <img src="assets/img/company-logo-2.png" alt="Project Logo" class="company-logo">
-                       <h3 class="timeline-title">Lead Developer <span class="company">@ EDIP-GUI Project</span></h3>
-                       <span class="timeline-date">Jun 2023 – Jul 2024</span>
-                       <p>Led the development of an enterprise-grade GUI to streamline complex workflows, enabling parallel execution of long-running scripts with real-time progress updates and a highly intuitive user interface.</p>
+                        <h3 class="timeline-title">Cloud Automation Engineer <span class="company">@ TCS</span></h3>
+                        <span class="timeline-date">Dec 2021 – Present</span>
+                        <p>Architecting and managing cloud-native solutions, focusing on development with Django, Django Rest Framework implementing robust logging and monitoring systems for high availability and auto-recovery.</p>
                     </div>
                 </div>
             </div>
@@ -175,13 +166,13 @@
             <h2 class="section-title standalone">Featured Projects</h2>
             <div class="project-gallery">
                  <div class="project-card glass-card">
-                    <h3>DesignMate API</h3>
-                    <p>A high-performance RESTful API using Django Rest Framework for serving design assets with scalability in mind.</p>
-                    <a href="#" class="project-link">View Project <i class="ri-arrow-right-up-line"></i></a>
+                    <h3>ExchangeX</h3>
+                    <p>A Currency Exchange Application built with Django and Django Rest Framework hosted on Google's Cloud Run</p>
+                    <a href="#" class="project-link">[Hidden] <i class="ri-arrow-right-up-line"></i></a>
                 </div>
                 <div class="project-card glass-card">
-                    <h3>EDIP-GUI</h3>
-                    <p>An enterprise desktop application built with CustomTkinter to manage and parallelize complex automation scripts.</p>
+                    <h3>Cloud Server Support API</h3>
+                    <p>A suite of APIs built with flask to expose support critical operations on cloud servers.</p>
                     <a href="#" class="project-link">View Project <i class="ri-arrow-right-up-line"></i></a>
                 </div>
             </div>
@@ -190,7 +181,7 @@
         <section id="contact" class="glass-card animate-scroll">
             <h2 class="section-title">Get In Touch</h2>
             <p class="contact-intro">Have a project idea or a question? I am always open to discussing new opportunities and creative collaborations.</p>
-            <form class="contact-form" action="https://formspree.io/f/your_form_id" method="POST">
+            <form class="contact-form" action="https://formspree.io/f/mjkovyqw" method="POST">
                 <div class="form-group">
                     <input type="text" name="name" placeholder="Name" required />
                     <input type="email" name="email" placeholder="Email" required />
